...

// 26.08.08 B 検索ビュー
struct RSSSearchView: View {
    @Bindable var searchStore: StoreOf<SearchViewFeature>
    var body: some View {
        VStack {
            HeaderView(headerTitle: "検索", identifier: "SearchTitle", closeButtonAction: {
                searchStore.send(.closeButtonTapped)
            })
            CapsuleSegment(
                segmentSize: CGSize(width: 200, height: 30),
                selectedSegment: $searchStore.searchKind,
                Text: { title in
...
