...
    let headerText: String
    private let btnSize: CGSize = CGSize(width: 20, height: 20)
    
    var body: some View {
        VStack {
            HStack {
                SearchButton(homeStore: homeStore, btnSize: btnSize)
                    .padding(.leading, 10).accessibilityIdentifier("SearchButton")
                Spacer()
                Text(headerText)
                    .font(.headline)
                Spacer()
                SettingButton(homeStore: homeStore, btnSize: btnSize)
...
