...
                    case .loading:
                        ProgressView("読み込み中")
                            .frame(maxWidth: .infinity, maxHeight: .infinity)
                    case .noFeeds:
                        NoFeedView(homeStore: homeStore)
                    case .feeds:
                        FeedList(homeStore: homeStore)
                    case .error:
                        ContentUnavailableView("読み込みに失敗しました...", systemImage: "exclamationmark.icloud")
                    }
                }
            } destination: { store in
                switch store.case {
...
